--- a/src/components/Account/Settings/ChangeNameForm/ChangeNameForm.module.scss
+++ b/src/components/Account/Settings/ChangeNameForm/ChangeNameForm.module.scss
@@ -3,9 +3,13 @@
     align-items: center;
 
     > div {
-        &:first-of-type {
+        &:nth-child(1), &:nth-child(2) {
             width: 100%;
             margin: 0 !important;
+        }
+
+        &:nth-child(2) {
+            margin-left: 10px !important;
         }
         &:last-of-type {
             margin-left: 15px !important;
